--- a/AutomationProjectQA/AutomationProjectQA.csproj
+++ b/AutomationProjectQA/AutomationProjectQA.csproj
@@ -54,6 +54,7 @@
     <Compile Include="PageObjects\Simple\SimplePage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WaitingClasses\MainWaitingClass.cs" />
     <Compile Include="Wrapers\ElementClass.cs" />
   </ItemGroup>
   <ItemGroup>
