--- a/AutomationProjectQA/AutomationProjectQA.csproj
+++ b/AutomationProjectQA/AutomationProjectQA.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WaitingClasses\MainWaitingClass.cs" />
-    <Compile Include="Wrapers\ElementClass.cs" />
+    <Compile Include="Wrapers\Element.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
