--- a/AutomationProjectQA/AutomationProjectQA.csproj
+++ b/AutomationProjectQA/AutomationProjectQA.csproj
@@ -50,10 +50,11 @@
   <ItemGroup>
     <Compile Include="DriverCore\Driver\DriverClass.cs" />
     <Compile Include="PageObjects\BasicPage.cs" />
-    <Compile Include="PageObjects\Simple\SimplePage.cs" />
+    <Compile Include="PageObjects\Simple\WikiPage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WaitingClasses\MainWaitingClass.cs" />
+    <Compile Include="Wrapers\ElementList.cs" />
     <Compile Include="Wrapers\Element.cs" />
   </ItemGroup>
   <ItemGroup>
