--- a/AutomationProjectQA/AutomationProjectQA.csproj
+++ b/AutomationProjectQA/AutomationProjectQA.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Waiting\MainWaitingClass.cs" />
+    <Compile Include="Waiting\WaitMethodsList.cs" />
     <Compile Include="Wrapers\ElementList.cs" />
     <Compile Include="Wrapers\Element.cs" />
   </ItemGroup>
