--- a/AutomationProjectQA/AutomationProjectQA.csproj
+++ b/AutomationProjectQA/AutomationProjectQA.csproj
@@ -56,6 +56,7 @@
     <Compile Include="HelpersMethods\ElementActions.cs" />
     <Compile Include="HelpersMethods\Helpers.cs" />
     <Compile Include="HelpersMethods\JavaScriptExecutorClass.cs" />
+    <Compile Include="HelpersMethods\RegExp.cs" />
     <Compile Include="PageObjects\BasicPage.cs" />
     <Compile Include="PageObjects\Simple\WikiPage.cs" />
     <Compile Include="Program.cs" />
