--- a/AutomationProjectQA/AutomationProjectQA.csproj
+++ b/AutomationProjectQA/AutomationProjectQA.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack, Version=1.11.36.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.11.36\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -57,6 +60,7 @@
     <Compile Include="HelpersMethods\AppConfigParameters.cs" />
     <Compile Include="HelpersMethods\ElementActions.cs" />
     <Compile Include="HelpersMethods\Helpers.cs" />
+    <Compile Include="HelpersMethods\HtmlParser.cs" />
     <Compile Include="HelpersMethods\JavaScriptExecutorClass.cs" />
     <Compile Include="HelpersMethods\RegExp.cs" />
     <Compile Include="PageObjects\BasicPage.cs" />
