--- a/AutomationProjectQA/packages.config
+++ b/AutomationProjectQA/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HtmlAgilityPack" version="1.11.36" targetFramework="net452" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net452" />
   <package id="Selenium.WebDriver.ChromeDriver" version="91.0.4472.10100" targetFramework="net452" />
