--- a/AutomationProjectQA/AutomationProjectQA.csproj
+++ b/AutomationProjectQA/AutomationProjectQA.csproj
@@ -59,7 +59,8 @@
     <Compile Include="DriverCore\Driver\DriverClass.cs" />
     <Compile Include="HelpMethods\AppConfigParameters.cs" />
     <Compile Include="ElementCore\ElementActions.cs" />
-    <Compile Include="HelpMethods\Helpers.cs" />
+    <Compile Include="ElementCore\ElementHelpers.cs" />
+    <Compile Include="HelpMethods\HelpMethodsClass.cs" />
     <Compile Include="HelpMethods\HtmlParser.cs" />
     <Compile Include="HelpMethods\JavaScriptExecutorClass.cs" />
     <Compile Include="HelpMethods\RegExp.cs" />
