--- a/AutomationProjectQA/App.config
+++ b/AutomationProjectQA/App.config
@@ -5,5 +5,7 @@
     </startup>
   <appSettings>
     <add key="defaultBrowser" value="chrome"/>
+    <add key="apiLogin" value="user"/>
+    <add key="apiPassword" value="password"/>
   </appSettings>
 </configuration>
