--- a/AutomationProjectQA/packages.config
+++ b/AutomationProjectQA/packages.config
@@ -6,4 +6,5 @@
   <package id="Selenium.Support" version="3.141.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net452" />
   <package id="Selenium.WebDriver.ChromeDriver" version="91.0.4472.10100" targetFramework="net452" />
+  <package id="SikuliSharp" version="1.5.0" targetFramework="net452" />
 </packages>
