--- a/AutomationProjectQA/packages.config
+++ b/AutomationProjectQA/packages.config
@@ -2,9 +2,12 @@
 <packages>
   <package id="HtmlAgilityPack" version="1.11.36" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net452" />
+  <package id="NPOI" version="2.5.4" targetFramework="net452" />
+  <package id="Portable.BouncyCastle" version="1.8.6" targetFramework="net452" />
   <package id="RestSharp" version="106.12.0" targetFramework="net452" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net452" />
   <package id="Selenium.WebDriver.ChromeDriver" version="91.0.4472.10100" targetFramework="net452" />
+  <package id="SharpZipLib" version="1.3.1" targetFramework="net452" />
   <package id="SikuliSharp" version="1.5.0" targetFramework="net452" />
 </packages>
